--- a/lovefi-agents/package.json
+++ b/lovefi-agents/package.json
@@ -9,23 +9,24 @@
     "dev": "ts-node-dev app.ts"
   },
   "dependencies": {
+    "@cosmjs/crypto": "^0.30.1",
+    "@cosmjs/encoding": "^0.30.1",
+    "bech32": "^2.0.0",
+    "bip39": "^3.0.4",
     "express": "^4.18.2",
     "node-fetch": "^2.6.7",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
-    "bip39": "^3.0.4",
-    "@cosmjs/encoding": "^0.30.1",
-    "@cosmjs/crypto": "^0.30.1",
-    "bech32": "^2.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.0",
+    "@types/node-fetch": "^2.6.13",
     "@types/uuid": "^9.0.0",
-    "typescript": "^5.0.0",
     "ts-node": "^10.9.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
   },
   "keywords": [
     "dating",
