--- a/lovefi-agents/requirements.txt
+++ b/lovefi-agents/requirements.txt
@@ -1,6 +1,4 @@
-uagents>=0.9.0
-pydantic>=2.0.0
 fastapi>=0.100.0
-uvicorn>=0.20.0
+pydantic>=2.0.0
+mangum>=0.17.0
 requests>=2.31.0
-aiohttp>=3.8.0
