--- a/lovefi-agents/vercel.json
+++ b/lovefi-agents/vercel.json
@@ -8,15 +8,13 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/index.py"
-    },
-    {
       "src": "/(.*)",
       "dest": "/api/index.py"
     }
   ],
-  "env": {
-    "PYTHONPATH": "/var/task"
+  "functions": {
+    "api/index.py": {
+      "maxDuration": 10
+    }
   }
 }
