Add minimal test endpoint to diagnose Vercel deployment issues
- Created simple BaseHTTPRequestHandler-based endpoint
- Removed all complex dependencies
- Testing basic Vercel Python function deployment

--- a/lovefi-agents/vercel.json
+++ b/lovefi-agents/vercel.json
@@ -2,18 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.py",
+      "src": "api/test.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/index.py"
+      "dest": "/api/test.py"
     }
   ],
   "functions": {
-    "api/index.py": {
+    "api/test.py": {
       "maxDuration": 10
     }
   }
