--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 {
   "version": 2,
   "functions": {
-    "api/test.py": {
+    "api/*.py": {
       "runtime": "python3.9"
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/api/index" }
+  ]
 }
